Html skeleton created for header

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
         <title>Donut Landing Page Clone</title>
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./css/index.css">
     </head>
     <body>
-       
+       <header>
+           <div class="container">
+                <div id="branding">donut</div>
+                <nav>
+                    <ul>
+                        <li><a href="#pairing">Pairing</a></li>
+                        <li><a href="#onboarding">Onboarding</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#jobs">Jobs</a></li>
+                        <li><a href="#signin">Sign In</a></li>
+                    </ul>
+                </nav>
+           </div> <!-- Closing tag for div container-->
+       </header>
         
-        <script src="" async defer></script>
+        <script src="./js/index.js"></script>
     </body>
 </html>
