html skeleton for all sections completed.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,88 @@
                 </nav>
            </div> <!-- Closing tag for div container-->
        </header>
+       <section id="addToSlack">
+           <div class="container">
+                <h1>Build amazing company culture with Donut</h1>
+                <button>Add to Slack</button>
+            </div>
+       </section>
+       <section id="jobs">
+            <div class="container">
+                <div id="job-images">
+                    <img src="#invision">
+                    <img src="#ibm">
+                    <img src="blueapron">
+                    <img src="cultureamp">
+                    <img src="managedbyq">
+                    <img src="meetup">
+                    <img src="athinkingape">
+                    <img src="nulogy">
+                </div>
+            </div><!-- Closing tag for div container-->
+       </section>
+       <section id="info">
+            <div class="container">
+                <div id="pairing">
+                    <h1>Pairing</h1>
+                    <p>Spread trust and collaboration across your organization by pairing up team members who don't know each other well.</p>
+                    <a href="#pairing">Learn more</a>
+                </div>
+                <div id="onboarding">
+                    <h1>Onboarding</h1>
+                    <p>Connect new hires with the right people and information from day one with people-first new-hire onboarding.</p>
+                    <a href="#onboarding">Learn more</a>
+                </div>
+            </div><!-- Closing tag for div container-->
+       </section>
+       <section id="invision-ceo">
+           <div class="container">
+                <div id="ceo-image"><img src="#ceo-image"></div>
+                <div id="invision-branding"><img src="#invision-branding"></div>
+                <quote> "Donut helps us strengthen personal connections and InVision's company culture."</quote>
+                <p>Clark Valberg</p>
+                <p>InVision, CEO & Founder</p>
+                <a href="">Read how InVision powers culture and communication</a>
+           </div><!-- Closing tag for div container-->
+       </section>
+       <section id="#people">
+           <div class="container">
+                <img src="#image1">
+                <img src="#image2">
+                <img src="#image3">
+                <img src="#image4">
+                <img src="#image5">
+                <img src="#image6">
+                <img src="#image7">
+                <img src="#image8">
+                <img src="#image9">
+           </div><!-- Closing tag for div container-->
+       </section>
+       <footer>
+           <div class="container">
+               <div id="box-1">
+                    <p>Sign up for our newsletter</p>
+                    <button>Submit</button>
+                </div>
+                <div id="box-2">
+                    <a href="">About Us</a>
+                    <a href="">Jobs (Join Us)</a>
+                    <a href="">Support</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Terms of Use</a>
+                </div>
+                <div id="box-3">
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                    <i></i>
+                    <p>2017 Donut Technologies Inc. All rights reserved.
+                    </p>
+                </div>
+            </div>
+       </footer>
         
         <script src="./js/index.js"></script>
     </body>
