--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
+        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
     </head>
     <body>
        <header>
            <div class="container">
-                <div id="branding">donut</div>
+                <div id="branding"><img src="./images/brand-donut.svg">Donut</div>
                 <nav>
                     <ul>
                         <li><a href="#pairing">Pairing</a></li>
