Changes to header, along with css styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     </head>
     <body>
        <header>
-           <div class="container">
-                <div id="branding"><img src="./images/brand-donut.svg">Donut</div>
-                <nav>
-                    <ul>
+            <img src="./images/brand-donut.svg">
+                 <nav>
+                    <ul id="nav-links">
                         <li><a href="#pairing">Pairing</a></li>
                         <li><a href="#onboarding">Onboarding</a></li>
                         <li><a href="#about">About</a></li>
@@ -21,7 +20,6 @@
                         <li><a href="#signin">Sign In</a></li>
                     </ul>
                 </nav>
-           </div> <!-- Closing tag for div container-->
        </header>
        <section id="addToSlack">
            <div class="container">
