--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Mansalva&display=swap" rel="stylesheet">
     </head>
     <body>
        <header>
-            <img src="./images/brand-donut.svg">
-                 <nav>
-                    <ul id="nav-links">
-                        <li><a href="#pairing">Pairing</a></li>
-                        <li><a href="#onboarding">Onboarding</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#jobs">Jobs</a></li>
-                        <li><a href="#signin">Sign In</a></li>
-                    </ul>
-                </nav>
+            <nav>
+                <ul id="nav-links">
+                    <li id="brand">Donut</li>
+                    <li><button><a href="#signin">Sign In</a></button></li>
+                    <li><a href="#jobs">Jobs</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#onboarding">Onboarding</a></li>
+                    <li><a href="#pairing">Pairing</a></li>
+                </ul>
+            </nav>
        </header>
        <section id="addToSlack">
            <div class="container">
@@ -38,6 +38,9 @@
                     <img src="meetup">
                     <img src="athinkingape">
                     <img src="nulogy">
+                    <p>Maecenas efficitur arcu quis est congue pulvinar. Curabitur commodo odio id ex laoreet commodo. Suspendisse et leo tellus. Nam facilisis elit quis arcu venenatis malesuada. Cras dignissim pharetra lorem sit amet dictum. Donec a ultrices ex. Pellentesque vitae finibus elit. Proin facilisis vel erat a consequat. Fusce ultricies tortor eget dui varius imperdiet. Etiam tempor sit amet ex eu tempus. Phasellus convallis arcu venenatis velit aliquet, a vehicula nibh viverra. Aenean iaculis gravida arcu, nec efficitur quam sodales quis. Nullam vitae consectetur arcu.
+
+                            Aenean lacinia dapibus leo, sed euismod purus efficitur a. Vestibulum non libero eu arcu dapibus tincidunt nec quis urna. Suspendisse ornare scelerisque accumsan. Pellentesque pretium nisl non rutrum pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed ut nulla non sapien tincidunt suscipit. Aliquam rutrum dolor id tortor sodales pharetra. Cras vel suscipit purus, non aliquam mauris.</p>
                 </div>
             </div><!-- Closing tag for div container-->
        </section>
