Styled h1 within addToSlack section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul id="nav-links">
                     <li id="brand">Donut</li>
-                    <li><button><a href="#signin">Sign In</a></button></li>
+                    <li><a href="#signin">Sign In</a></li>
                     <li><a href="#jobs">Jobs</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#onboarding">Onboarding</a></li>
@@ -23,7 +23,7 @@
        </header>
        <section id="addToSlack">
            <div class="container">
-                <h1>Build amazing company culture with Donut</h1>
+                <h1>Build amazing <br>company culture <br> with Donut.</h1>
                 <button>Add to Slack</button>
             </div>
        </section>
