Added ana svg image , and styled button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
        <section id="addToSlack">
            <div class="container">
                 <h1>Build amazing <br>company culture <br> with Donut.</h1>
-                <button>Add to Slack</button>
+                <button><i class="fab fa-slack-hash fa-2x"></i>Add to <span class="bold">Slack</span></button>
+                <br>
+                <img id="ana" src="/images/ana-1297966.svg">
             </div>
        </section>
        <section id="jobs">
@@ -107,7 +109,7 @@
                 </div>
             </div>
        </footer>
-        
+        <script src="https://kit.fontawesome.com/f4dae94291.js" crossorigin="anonymous"></script>
         <script src="./js/index.js"></script>
     </body>
 </html>
