Added logo images to job section

--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
        <section id="jobs">
             <div class="container">
                 <div id="job-images">
-                    <img src="#invision">
-                    <img src="#ibm">
-                    <img src="blueapron">
-                    <img src="cultureamp">
-                    <img src="managedbyq">
-                    <img src="meetup">
-                    <img src="athinkingape">
-                    <img src="nulogy">
-                    <p>Maecenas efficitur arcu quis est congue pulvinar. Curabitur commodo odio id ex laoreet commodo. Suspendisse et leo tellus. Nam facilisis elit quis arcu venenatis malesuada. Cras dignissim pharetra lorem sit amet dictum. Donec a ultrices ex. Pellentesque vitae finibus elit. Proin facilisis vel erat a consequat. Fusce ultricies tortor eget dui varius imperdiet. Etiam tempor sit amet ex eu tempus. Phasellus convallis arcu venenatis velit aliquet, a vehicula nibh viverra. Aenean iaculis gravida arcu, nec efficitur quam sodales quis. Nullam vitae consectetur arcu.
-
-                            Aenean lacinia dapibus leo, sed euismod purus efficitur a. Vestibulum non libero eu arcu dapibus tincidunt nec quis urna. Suspendisse ornare scelerisque accumsan. Pellentesque pretium nisl non rutrum pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed ut nulla non sapien tincidunt suscipit. Aliquam rutrum dolor id tortor sodales pharetra. Cras vel suscipit purus, non aliquam mauris.</p>
+                    <img src="/images/invision_logo.png">
+                    <img src="images/ibm_logo.png">
+                    <img src="/images/blue_apron_logo.png">
+                    <img src="/images/culture_amp_logo .png">
+                    <img src="/images/managed_by_q_logo.png">
+                    <img src="/images/meetuplogo.png">
+                    <img src="/images/a_thinking_ape_logo.png">
+                    <img src="/images/nulogy_logo.png">
                 </div>
             </div><!-- Closing tag for div container-->
        </section>
