Resized images & placed them within container

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div id="job-images">
                     <img src="/images/invision_logo.png">
                     <img src="images/ibm_logo.png">
-                    <img src="/images/blue_apron_logo.png">
+                    <img src="/images/blue-apron-vector-logo.png">
                     <img src="/images/culture_amp_logo .png">
                     <img src="/images/managed_by_q_logo.png">
                     <img src="/images/meetuplogo.png">
