--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
        <section id="jobs">
             <div class="container">
                 <div id="job-images">
-                    <img src="/images/invision_logo.png">
-                    <img src="images/ibm_logo.png">
-                    <img src="/images/blue-apron-vector-logo.png">
-                    <img src="/images/culture_amp_logo .png">
-                    <img src="/images/managed_by_q_logo.png">
-                    <img src="/images/meetuplogo.png">
-                    <img src="/images/a_thinking_ape_logo.png">
-                    <img src="/images/nulogy_logo.png">
+                    <img src="/images/logos/invision_logo.png">
+                    <img src="/images/logos/ibm_logo.png">
+                    <img src="/images/logos/a_blue_apron.png">
+                    <img src="/images/logos/Culture-Amp.png">
+                    <img src="/images/logos/managed-by-q-logo@2x.png">
+                    <img src="/images/logos/meetuplogo.png">
+                    <img src="/images/logos/a_thinking_ape_logo.png">
+                    <img src="/images/logos/Logo-Nulogy-square.png">
                 </div>
             </div><!-- Closing tag for div container-->
        </section>
