--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
                     <div class="box-1">
                         <h1>Pairing</h1>
                         <p>Spread trust and collaboration across your organization by pairing up team members who don't know each other well.</p>
-                        <a href="#pairing">Learn more</a>
+                        <a href="#pairing">Learn more >></a>
                     </div>
                 </div>
                 <div id="onboarding">
                     <div class="box-2">
                         <h1>Onboarding</h1>
                         <p>Connect new hires with the right people and information from day one with people-first new-hire onboarding.</p>
-                        <a href="#onboarding">Learn more</a>
+                        <a href="#onboarding">Learn more >></a>
                     </div>
                 </div>
             </div><!-- Closing tag for div container-->
