Style and images added to ceo section

--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
        </section>
        <section id="invision-ceo">
            <div class="container">
-                <div id="ceo-image"><img src="#ceo-image"></div>
-                <div id="invision-branding"><img src="#invision-branding"></div>
-                <quote> "Donut helps us strengthen personal connections and InVision's company culture."</quote>
-                <p>Clark Valberg</p>
-                <p>InVision, CEO & Founder</p>
-                <a href="">Read how InVision powers culture and communication</a>
-           </div><!-- Closing tag for div container-->
+                <div id="ceo-image"><img src="/images/clark_valberg.jpeg">
+                    <img src="/images/logos/invision_logo.png">
+                </div>
+                <div id="ceo-quote">
+                    <quote> "Donut helps us strengthen personal connections and InVision's company culture."</quote>
+                    <p>Clark Valberg <br>
+                    <span>InVision</span>, CEO & Founder</p>
+                    <a href="">Read how InVision powers culture and communication >></a>
+                </div>
+            </div><!-- Closing tag for div container-->
        </section>
        <section id="#people">
            <div class="container">
