Added images to people section

--- a/index.html
+++ b/index.html
@@ -77,15 +77,8 @@
        </section>
        <section id="#people">
            <div class="container">
-                <img src="#image1">
-                <img src="#image2">
-                <img src="#image3">
-                <img src="#image4">
-                <img src="#image5">
-                <img src="#image6">
-                <img src="#image7">
-                <img src="#image8">
-                <img src="#image9">
+            <img src="/images/avatar-1.png">
+            <img src="/images/avatar-1.png">
            </div><!-- Closing tag for div container-->
        </section>
        <footer>
