Added font awesome script, and icons

--- a/index.html
+++ b/index.html
@@ -95,13 +95,22 @@
                     <a href="">Terms of Use</a>
                 </div>
                 <div id="box-3">
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <i></i>
-                    <p>2017 Donut Technologies Inc. All rights reserved.
+                    <a href="#" target="_blank">
+                        <i class="fab fa-twitter fa-2x"></i>
+                      </a>
+                      <a href="#" target="_blank">
+                        <i class="fab fa-facebook fa-2x"></i>
+                      </a>
+                      <a href="#" target="_blank">
+                        <i class="fab fa-linkedin fa-2x"></i>
+                      </a>
+                      <a href="#" target="_blank">
+                        <i class="fab fa-slack fa-2x"></i>
+                      </a>
+                      <a href="#" target="_blank">
+                        <i class="fab fa-instagram fa-2x"></i>
+                      </a>
+                    <p>2019 Donut Technologies Inc. All rights reserved.
                     </p>
                 </div>
             </div>
