Added form to footer

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
            <div class="container">
                <div id="box-1">
                     <p>Sign up for our newsletter</p>
-                    <button>Submit</button>
+                    <form>
+                        <input type="email" placeholder="Enter Email..">
+                        <button type="submit" class="button_1">Subscribe</button>
+                    </form>
                 </div>
                 <div id="box-2">
                     <a href="">About Us</a>
