Styled ceo section

--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
        </section>
        <section id="invision-ceo">
            <div class="container">
-                <div id="ceo-image"><img src="/images/clark_valberg.jpeg">
-                    <img src="/images/logos/invision_logo.png">
+                <div id="ceo-image">
+                    <img src="/images/clark_valberg.jpeg" class="image-1">
+                    <img src="/images/logos/invision_logo.png" class="image-2">
                 </div>
                 <div id="ceo-quote">
                     <quote> "Donut helps us strengthen personal connections and InVision's company culture."</quote>
                     <p>Clark Valberg <br>
                     <span>InVision</span>, CEO & Founder</p>
-                    <a href="">Read how InVision powers culture and communication >></a>
+                    <a href="#">Read how InVision powers culture and communication >></a>
                 </div>
             </div><!-- Closing tag for div container-->
        </section>
@@ -91,11 +92,11 @@
                     </form>
                 </div>
                 <div id="box-2">
-                    <a href="">About Us</a>
-                    <a href="">Jobs (Join Us)</a>
-                    <a href="">Support</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">Terms of Use</a>
+                    <a href="#">About Us</a>
+                    <a href="#">Jobs (Join Us)</a>
+                    <a href="#">Support</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Use</a>
                 </div>
                 <div id="box-3">
                     <a href="#" target="_blank">
