styled & eplaced image within add to slack section

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
        </header>
        <section id="addToSlack">
            <div class="container">
-                <h1>Build amazing <br>company culture <br> with Donut.</h1>
+               <div class="slogan">
+                    <h1>Build amazing <br>
+                    company culture <br> 
+                    with Donut.
+                    </h1>
                 <button><i class="fab fa-slack-hash fa-2x"></i>Add to <span class="bold">Slack</span></button>
+                </div>
                 <br>
-                <img id="ana" src="/images/ana-1297966.svg">
+                <div class="slogan-image">
+                    <img id="ana" src="/images/ana-1297966_640.png">
+                </div>
             </div>
        </section>
        <section id="jobs">
@@ -78,8 +85,7 @@
        </section>
        <section id="#people">
            <div class="container">
-            <img src="/images/avatar-1.png">
-            <img src="/images/avatar-1.png">
+                <div class="workers"></div>
            </div><!-- Closing tag for div container-->
        </section>
        <footer>
