background img added & styled in "people" section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
        </section>
        <section id="#people">
            <div class="container">
-                <div class="workers"></div>
+                <div class="workers">
+                    
+                </div>
            </div><!-- Closing tag for div container-->
        </section>
        <footer>
