--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     <p>Sign up for our newsletter</p>
                     <form>
                         <input type="email" placeholder="Enter Email..">
+                        <br>
                         <button type="submit" class="button_1">Subscribe</button>
                     </form>
                 </div>
@@ -122,8 +123,7 @@
                       <a href="#" target="_blank">
                         <i class="fab fa-instagram fa-2x"></i>
                       </a>
-                    <p>2019 Donut Technologies Inc. All rights reserved.
-                    </p>
+                    <p>2019 Donut Technologies Inc. All rights reserved.</p>
                 </div>
             </div>
        </footer>
