Styled input & button within footer

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                <div id="box-1">
                     <p>Sign up for our newsletter</p>
                     <form>
-                        <input type="email" placeholder="Enter Email..">
+                        <input type="email" placeholder="Email address">
                         <br>
-                        <button type="submit" class="button_1">Subscribe</button>
+                        <button type="submit" class="button_1">Submit</button>
                     </form>
                 </div>
                 <div id="box-2">
