Sign in styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul id="nav-links">
                     <li id="brand">Donut</li>
-                    <li><a href="#signin">Sign In</a></li>
+                    <li><a class="sign-in" href="#signin">Sign In</a></li>
                     <li><a href="#jobs">Jobs</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#onboarding">Onboarding</a></li>
