Js implemented which changes navbar on scroll down

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </head>
     <body>
        <header>
-            <nav>
-                <ul id="nav-links">
+            <nav id="mynav"> 
+                <ul id="nav-links-purple">
                     <li id="brand">Donut</li>
                     <li><a class="sign-in" href="#signin">Sign In</a></li>
                     <li><a href="#jobs">Jobs</a></li>
