Add to Slack button image added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     company culture <br> 
                     with Donut.
                     </h1>
-                <button><i class="fab fa-slack-hash fa-2x"></i>Add to <span class="bold">Slack</span></button>
+                <button><img src="/images/icons8-slack-48.png"> Add to <span>Slack</span></button>
                 </div>
                 <br>
                 <div class="slogan-image">
@@ -121,7 +121,7 @@
                         <i class="fab fa-slack fa-2x"></i>
                       </a>
                       <a href="#" target="_blank">
-                        <i class="fab fa-instagram fa-2x"></i>
+                        <i class="fab fa-instagram fa-1x"></i>
                       </a>
                       <br>
                       <br>
