Media Query for 768px , 992px, & 1200px

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Donut Landing Page Clone</title>
+        <title>Home-Donut</title>
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
