--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
+        <link rel="icon" href="#">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300|Luckiest+Guy&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -86,7 +87,7 @@
        <section id="#people">
            <div class="container">
                 <div class="workers">
-                    
+
                 </div>
            </div><!-- Closing tag for div container-->
        </section>
