--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/index.css">
-        <link rel="icon" href="#">
+        <link rel="icon" href="/images/logos/DonutSiteLogo.png">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300|Luckiest+Guy&display=swap" rel="stylesheet">
     </head>
     <body>
