--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./css/index.css">
         <link rel="icon" href="/images/logos/DonutSiteLogo.png">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300|Luckiest+Guy&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
        <header>
