--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         <link rel="icon" href="/images/logos/DonutSiteLogo.png">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300|Luckiest+Guy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </head>
     <body>
        <header>
-            <nav id="mynav"> 
+            <nav id="mynav">      <!--Top Nav-->
                 <ul id="nav-links-purple">
                     <li id="brand">Donut</li>
                     <li><a class="sign-in" href="#signin">Sign In</a></li>
