Responsive meta-tag to head

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home-Donut</title>
         <meta name="Donut Landing Page Clone" content="Donut Landing Page Clone">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./css/index.css">
         <link rel="icon" href="/images/logos/DonutSiteLogo.png">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300|Luckiest+Guy&display=swap" rel="stylesheet">
