Comment placed within empty div

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
        <section id="#people">
            <div class="container">
                 <div class="workers">
-
+                    <!-- Empty-->
                 </div>
            </div><!--Closing tag for div container-->
        </section>
